<resources>
    <string name="app_name">HaVagas</string>
    <string name="havagas">HaVagas</string>
    <string name="nome">Nome</string>
    <string name="informe_seu_nome">Informe seu nome</string>
    <string name="e_mail">E-mail</string>
    <string name="informe_seu_email">Informe seu email</string>
    <string name="receber_atualizacoes_por_email">Receber atualizacoes por email?</string>
    <string name="sim">Sim</string>
    <string name="n_o">Não</string>
    <string name="desejo_receber_atualizacoes_por_email">Desejo receber atualizacoes por email</string>
    <string name="tipo_de_telefone">Tipo de telefone</string>
    <string name="comercial">Comercial</string>
    <string name="residencial">Residencial</string>
    <string name="informe_seu_telefone">Informe seu telefone</string>
    <string name="incluir_telefone_celular">Incluir telefone celular?</string>
    <string name="telefone_celular">Telefone Celular</string>
    <string name="informe_seu_telefone_celular">Informe seu telefone celular</string>
    <string name="sexo">Sexo</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="data_de_nascimento">Data de nascimento</string>
    <string name="formacao">Formacao</string>
    <string name="ano_de_formacao">Ano de formacao</string>
    <string name="ano_de_conclusao">Ano de conclusao</string>
    <string name="instituicao">Instituicao</string>
    <string name="titulo_de_monografia">Titulo de monografia</string>
    <string name="orientador">Orientador</string>
    <string name="informe_o_ano_de_formacao">Informe o ano de formacao</string>
    <string name="informe_o_ano_de_conclusao">Informe o ano de conclusao</string>
    <string name="informe_a_instituicao">Informe a Instituicao</string>
    <string name="informe_as_vagas_de_interesse">Informe as vagas de interesse</string>
    <string name="vagas_de_interesse">Vagas de interesse</string>
    <string name="informe_o_titulo_de_monografia">Informe o titulo de monografia</string>
    <string name="informe_o_orientador">Informe o orientador</string>
    <string name="salvar">Salvar</string>
    <string name="limpar">Limpar</string>
    <string-array name="formacoes">
        <item>Fundamental</item>
        <item>Medio</item>
        <item>Graduacao</item>
        <item>Especializacao</item>
        <item>Mestrado</item>
        <item>Doutorado</item>
    </string-array>
</resources>